ADD: control de errores al meter campos de nombre no únicos