@@ -37,23 +37,27 @@ public class GestionProductosController {
 			@Override
 			public void actionPerformed(ActionEvent e) {
 				if(!view.getTextFieldNewNombre().getText().equals("")) {
-					DefaultTableModel tableModel = (DefaultTableModel) view.getTable().getModel();
-					int nextId = (int) tableModel.getValueAt(tableModel.getRowCount() - 1, 0) + 1;//calculamos id siguiente
-					String name = view.getTextFieldNewNombre().getText();
-					double precio = (double) view.getSpinnerPrecioNew().getValue();
-					String precioFormateado = NumberFormat.getCurrencyInstance().format(precio);//formateamos el precio para meterlo al modelo de la tabla
-					//separamos el id y el nombre de la categoria para meterlo en BBDD y el modelo de la tabla
-					String categoriaString = (String) view.getComboBoxCategoriaNew().getSelectedItem();
-					int categoriaId = Integer.valueOf(categoriaString.split("-")[0]);
-					String categoria = categoriaString.split("-")[1];
-					tableModel.addRow(new Object[]{nextId, name, precioFormateado, categoria});//Insertamos en la tabla de la vista
-					model.insertNewProducto(nextId, name, precio, categoriaId);//Insertamos en BBDD
-					//Restablecemos valores
-					view.getTextFieldNewNombre().setText("");
-					view.getSpinnerPrecioNew().setValue(new Double(0));
-					view.getComboBoxCategoriaNew().setSelectedIndex(0);
-					view.getLblNewVacio().setVisible(false);
-					view.getTable().clearSelection();
+					if(!thereIsNameInTable(view.getTextFieldNewNombre().getText())) {
+						DefaultTableModel tableModel = (DefaultTableModel) view.getTable().getModel();
+						int nextId = (int) tableModel.getValueAt(tableModel.getRowCount() - 1, 0) + 1;//calculamos id siguiente
+						String name = view.getTextFieldNewNombre().getText();
+						double precio = (double) view.getSpinnerPrecioNew().getValue();
+						String precioFormateado = NumberFormat.getCurrencyInstance().format(precio);//formateamos el precio para meterlo al modelo de la tabla
+						//separamos el id y el nombre de la categoria para meterlo en BBDD y el modelo de la tabla
+						String categoriaString = (String) view.getComboBoxCategoriaNew().getSelectedItem();
+						int categoriaId = Integer.valueOf(categoriaString.split("-")[0]);
+						String categoria = categoriaString.split("-")[1];
+						tableModel.addRow(new Object[]{nextId, name, precioFormateado, categoria});//Insertamos en la tabla de la vista
+						model.insertNewProducto(nextId, name, precio, categoriaId);//Insertamos en BBDD
+						//Restablecemos valores
+						view.getTextFieldNewNombre().setText("");
+						view.getSpinnerPrecioNew().setValue(new Double(0));
+						view.getComboBoxCategoriaNew().setSelectedIndex(0);
+						view.getLblNewVacio().setVisible(false);
+						view.getTable().clearSelection();
+					} else {
+						System.out.println("NOMBRE REPETIDO!!!!!!!!!!!");
+					}
 				} else {
 					view.getLblNewVacio().setVisible(true);
 				}
@@ -75,28 +79,32 @@ public class GestionProductosController {
 					view.getLblEditVacio().setVisible(false);
 				}
 				if (selectedRow && notEmptyTextField) {
-					DefaultTableModel tableModel = (DefaultTableModel) view.getTable().getModel();
-					int id = (int) view.getTable().getModel().getValueAt(view.getTable().getSelectedRow(), 0);
-					String name = view.getTextFieldEditNombre().getText();
-					double precio = (double) view.getSpinnerPrecioEdit().getValue();
-					String precioFormateado = NumberFormat.getCurrencyInstance().format(precio);//formateamos el precio para meterlo al modelo de la tabla
-					//separamos el id y el nombre de la categoria para meterlo en BBDD y el modelo de la tabla
-					String categoriaString = (String) view.getComboBoxCategoriaEdit().getSelectedItem();
-					int categoriaId = Integer.valueOf(categoriaString.split("-")[0]);
-					String categoria = categoriaString.split("-")[1];					
-					//Actualizamos la tabla de la vista
-					tableModel.setValueAt(name, view.getTable().getSelectedRow(), 1);
-					tableModel.setValueAt(precioFormateado, view.getTable().getSelectedRow(), 2);
-					tableModel.setValueAt(categoria, view.getTable().getSelectedRow(), 3);
-					//Actualizamos BBDD
-					model.updateProducto(id, name, precio, categoriaId);
-					//Restablecemos valores
-					view.getTextFieldEditNombre().setText("");
-					view.getSpinnerPrecioEdit().setValue(new Double(0));
-					view.getComboBoxCategoriaEdit().setSelectedIndex(0);
-					view.getLblEditVacio().setVisible(false);
-					view.getLblEditSeleccion().setVisible(false);
-					view.getTable().clearSelection();
+					if(!thereIsNameInTable(view.getTextFieldEditNombre().getText())) {
+						DefaultTableModel tableModel = (DefaultTableModel) view.getTable().getModel();
+						int id = (int) view.getTable().getModel().getValueAt(view.getTable().getSelectedRow(), 0);
+						String name = view.getTextFieldEditNombre().getText();
+						double precio = (double) view.getSpinnerPrecioEdit().getValue();
+						String precioFormateado = NumberFormat.getCurrencyInstance().format(precio);//formateamos el precio para meterlo al modelo de la tabla
+						//separamos el id y el nombre de la categoria para meterlo en BBDD y el modelo de la tabla
+						String categoriaString = (String) view.getComboBoxCategoriaEdit().getSelectedItem();
+						int categoriaId = Integer.valueOf(categoriaString.split("-")[0]);
+						String categoria = categoriaString.split("-")[1];					
+						//Actualizamos la tabla de la vista
+						tableModel.setValueAt(name, view.getTable().getSelectedRow(), 1);
+						tableModel.setValueAt(precioFormateado, view.getTable().getSelectedRow(), 2);
+						tableModel.setValueAt(categoria, view.getTable().getSelectedRow(), 3);
+						//Actualizamos BBDD
+						model.updateProducto(id, name, precio, categoriaId);
+						//Restablecemos valores
+						view.getTextFieldEditNombre().setText("");
+						view.getSpinnerPrecioEdit().setValue(new Double(0));
+						view.getComboBoxCategoriaEdit().setSelectedIndex(0);
+						view.getLblEditVacio().setVisible(false);
+						view.getLblEditSeleccion().setVisible(false);
+						view.getTable().clearSelection();
+					} else {
+						System.out.println("NOMBRE REPETIDO!!!!!!!!!!!");
+					}
 				}
 			}
 		});
@@ -162,6 +170,23 @@ public class GestionProductosController {
 			}
 		}
 		return modelIndex;
+	}
+	
+	/**
+	 * Buscamos nombre en tabla para evitar errores SQL de campos unicos
+	 * @param name
+	 * @return
+	 */
+	private boolean thereIsNameInTable(String name) {
+		boolean thereIsNameInTable = false;
+		for(int i = 0; i < view.getTable().getModel().getRowCount(); i++) {
+			String tableName = (String) view.getTable().getModel().getValueAt(i, 1);
+			if(tableName.equalsIgnoreCase(name)) {
+				thereIsNameInTable = true;
+				break;
+			}
+		}
+		return thereIsNameInTable;
 	}
 	
 }
